--- a/styles/shared.css
+++ b/styles/shared.css
@@ -30,11 +30,6 @@ main {
     margin-top: 7rem;
 }
 
-ul {
-    list-style: none;
-    display: flex;
-}
-
 a {
     color: inherit;
     text-decoration: none;
@@ -84,6 +79,34 @@ a {
 
 #mobile-nav {
     display: none;
+}
+
+.nav-list {
+    list-style: none;
+    display: flex;
+}
+
+.nav-list-item {
+    position: relative;
+    overflow: hidden;
+}
+
+.nav-list-item::after {
+    content: "";
+    background-color: var(--color-gray-200);
+    display: inline-block;
+    position: absolute;
+    height: 1rem;
+    width: 100%;
+    bottom: 0;
+    right: -100%;
+    z-index: -1;
+    transition: all 0.2s linear;
+}
+
+.nav-list-item:hover::after,
+.nav-list-item:active:after {
+    right: 0;
 }
 
 #hello {
