--- a/styles/shared.css
+++ b/styles/shared.css
@@ -1,6 +1,7 @@
 :root {
     --color-gray-100: rgb(250, 249, 246);
     --color-gray-200: rgb(227, 226, 224);
+    --color-gray-800: rgb(95, 95, 95);
     --color-gray-900: rgb(65, 64, 63);
 
     --header-bg-alpha: rgb(250, 249, 246, 0.5);
@@ -109,8 +110,38 @@ a {
     right: 0;
 }
 
-#hello {
-    font: 2.5rem var(--secondary-font-family);
-    letter-spacing: 2px;
+#main-footer {
+    margin-top: var(--space-4);
+    background-image: linear-gradient(to bottom right, var(--color-gray-900), var(--color-gray-800));
+    color: var(--color-gray-100);
+    padding: var(--space-6) var(--space-2);
+}
 
+#main-footer__cols {
+    width: 50%;
+    min-width: fit-content;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    justify-content: space-between;
+}
+
+.footer-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.footer-list-item {
+    margin: var(--space-2) 0;
+    padding: var(--space-1) var(--space-4);
+    background-image: linear-gradient(to right, var(--color-gray-200) 50%, transparent 50%);
+    background-size: 0 100%;
+    background-position: 0 0;
+    transition: all 0.3s ease-in;
+}
+
+.footer-list-item:hover,
+.footer-list-item:active {
+    color: var(--color-gray-900);
+    background-size: 200% 100%;
 }
