--- a/styles/shared.css
+++ b/styles/shared.css
@@ -21,6 +21,8 @@
   
     --border-radius-small: 4px;
     --border-radius-medium: 6px;
+
+    --box-shadow-basic: 0 0 10px rgba(65, 65, 65, 0.2);
 }
 
 body {
@@ -91,6 +93,7 @@ a {
 .nav-list {
     list-style: none;
     display: flex;
+    padding: 0;
 }
 
 .nav-list-item {
@@ -114,6 +117,93 @@ a {
 .nav-list-item:hover::after,
 .nav-list-item:active:after {
     right: 0;
+}
+
+#mobile-nav-btn {
+    display: none;
+    width: 2rem;
+    height: 2rem;
+    padding: var(--space-1);
+    background-color: transparent;
+    border-radius: var(--border-radius-small);
+    border: 2px solid var(--color-purple-600);
+    cursor: pointer;
+    transition: transform 0.1s ease-in;
+    position: relative;
+    z-index: 10;
+}
+
+#mobile-nav-btn span {
+    position: absolute;
+    width: calc(100% - 2 * var(--space-1));
+    height: 2px;
+    background-color: var(--color-pink-500);
+    transition: opacity 0.4s ease-in, transform 0.8s ease-out;
+    left: var(--space-1);
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#mobile-nav-btn span:first-child {
+    transform: translateY(-300%);
+}
+
+#mobile-nav-btn span:last-child {
+    transform: translateY(200%);
+}
+
+#mobile-nav-btn:hover {
+    transform: scale(1.2);
+    box-shadow: var(--box-shadow-basic);
+}
+
+#mobile-nav-btn:active {
+    transform: scale(0.8);
+}
+
+#mobile-nav-btn.is-open span {
+    top: 50%;
+}
+
+#mobile-nav-btn.is-open span:first-child {
+    transform: translateY(-50%) rotate(45deg);
+}
+
+#mobile-nav-btn.is-open span:nth-child(2) {
+    opacity: 0;
+}
+
+#mobile-nav-btn.is-open span:last-child {
+    transform: translateY(-50%) rotate(-45deg);
+}
+
+#mobile-nav {
+    position: fixed;
+    height: 100vh;
+    width: 0%;
+    top: 0;
+    right: 0;
+    background-color: var(--color-pink-200);
+    z-index: 9;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+#mobile-nav .nav-list {
+    flex-direction: column;
+}
+
+#mobile-nav .nav-list-item {
+    margin: var(--space-4) 0;
+    font-size: 2rem;
+    transition: transform 0.2s ease-out;
+}
+
+#mobile-nav .nav-list-item:hover,
+#mobile-nav .nav-list-item:active {
+    transform: scale(1.2);
 }
 
 #main-footer {
@@ -155,4 +245,29 @@ a {
 .col-lg-2 {
     width: 50%;
     padding: var(--space-4)
+}
+
+@media (max-width: 992px) {
+    #main-nav-cntr {
+        width: 80%;
+    }
+}
+
+@media (max-width: 768px) {
+    #main-nav {
+        display: none;
+    }
+
+    #mobile-nav-btn {
+        display: block;
+    }
+
+    #mobile-nav {
+        display: flex;
+    }
+
+    #mobile-nav.is-open {
+        width: 80%;
+        opacity: 1;
+    }
 }
