--- a/styles/about.css
+++ b/styles/about.css
@@ -10,8 +10,15 @@ main {
 }
 
 #about-section h1 {
-    font-size: 3rem;
+    font-size: 5rem;
     margin: 0;
+    color: var(--color-purple-600);
+}
+
+#about-section h2 {
+    margin: 0;
+    font-size: 4.5rem;
+    color: var(--color-pink-500);
 }
 
 #about-section p {
