--- a/styles/shared.css
+++ b/styles/shared.css
@@ -27,17 +27,23 @@
     --box-shadow-card: 4px 4px 4px rgba(0, 0, 0, 0.2);
 }
 
+html {
+    height: 100%;
+}
+
 body {
     background-color: var(--color-gray-100);
     color: var(--color-gray-900);
     font: 1rem var(--primary-font-family);
     padding: 0;
     margin: 0;
+    height: 100%;
 }
 
 main {
     margin: 7rem auto var(--space-8);
     width: 70%;
+    min-height: 100%;
 }
 
 a {
