--- a/styles/shared.css
+++ b/styles/shared.css
@@ -255,6 +255,21 @@ a {
     padding: var(--space-4)
 }
 
+.btn {
+    border: 1px solid var(--color-purple-600);
+    color: var(--color-purple-600);
+    padding: var(--space-2) var(--space-4);
+    border-radius: var(--border-radius-small);
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+
+.btn:hover,
+.btn:active {
+    background-color: var(--color-purple-600);
+    color: var(--color-gray-100);
+}
+
 @media (max-width: 992px) {
     #main-nav-cntr {
         width: 80%;
