--- a/styles/about.css
+++ b/styles/about.css
@@ -57,3 +57,31 @@ main {
 .tech-list-item span {
     margin: 0 var(--space-2);
 }
+
+@media (max-width: 768px) {
+    main {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 576px) {
+    #about-section h1 {
+        font-size: 4rem;
+    }
+
+    #about-section h2 {
+        font-size: 3.5rem;
+    }
+}
+
+@media (max-width: 420px) {
+    #about-section h1 {
+        font-size: 3rem;
+    }
+
+    #about-section h2 {
+        font-size: 2.5rem;
+    }
+}
