--- a/styles/contact.css
+++ b/styles/contact.css
@@ -15,3 +15,9 @@ h1 {
     display: flex;
     justify-content: center;
 }
+
+@media (max-width: 576px) {
+    h1 {
+        font-size: 3.5rem;
+    }
+}
